added hot method

--- a/MP1_Reddit_Data_Collection/Assignment1.ipynb
+++ b/MP1_Reddit_Data_Collection/Assignment1.ipynb
@@ -88,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -104,24 +104,19 @@
           "text": [
             "{'*'}\n"
           ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Version 7.7.1 of praw is outdated. Version 7.8.1 was released Friday October 25, 2024.\n"
-          ]
         }
       ],
       "source": [
         "import praw\n",
+        "client_id_global='Q140LzVBMeNeVXubMEA9cg'\n",
+        "client_secret_global='tLUkxHIpHcR833QVF47ZNVrckRLCAg'\n",
         "\n",
         "# ===========================================\n",
         "# TODO (0.1): load subjects into a pandas dataframe\n",
         "# TEST out your api keys(client_id and client_secret):\n",
         "reddit = praw.Reddit(\n",
-        "    client_id='Q140LzVBMeNeVXubMEA9cg',\n",
-        "    client_secret='tLUkxHIpHcR833QVF47ZNVrckRLCAg',\n",
+        "    client_id=client_id_global,\n",
+        "    client_secret=client_secret_global,\n",
         "    user_agent=\".\"\n",
         ")\n",
         "\n",
@@ -171,11 +166,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "x_q-AU9tnoMj"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "reddit=all\n",
+            "num=5\n",
+            "That only happens to you once. 😃\n",
+            "Trump Rejects Vance\n",
+            "She's not wrong\n",
+            "The oppressive feeling of the pamir plateau\n",
+            "Just insidious\n"
+          ]
+        }
+      ],
       "source": [
         "import praw\n",
         "import time\n",
@@ -185,8 +194,8 @@
         "    def __init__(self):\n",
         "        # Init scraper with your credentials.\n",
         "        self.reddit = praw.Reddit(\n",
-        "            client_id=None,\n",
-        "            client_secret=None,\n",
+        "            client_id=client_id_global,\n",
+        "            client_secret=client_secret_global,\n",
         "            user_agent=\".\",\n",
         "            check_for_async=False\n",
         "        )\n",
@@ -204,7 +213,9 @@
         "\n",
         "        # ===========================================\n",
         "        # TODO (1.1): fetch hostest 5 subreddits under the reddit \"uiuc\"\n",
-        "        fetched_subreddits = None\n",
+        "        print(f\"reddit={reddit}\")\n",
+        "        print(f\"num={num}\")\n",
+        "        fetched_subreddits = self.reddit.subreddit(reddit).hot(limit=num)\n",
         "        return fetched_subreddits\n",
         "        # ===========================================\n",
         "\n",
@@ -234,8 +245,8 @@
         "keywords = \"uiuc\"\n",
         "scraper = Scraper()\n",
         "\n",
-        "# for submission in scraper.hot_subreddit(\"all\", 5):\n",
-        "#   print(submission.title)\n",
+        "for submission in scraper.hot_subreddit(\"all\", 5):\n",
+        "  print(submission.title)\n",
         "\n",
         "data = scraper.search_subreddit(\"uiuc\",'month')\n",
         "# ===========================================\n",
