added top 5 search

--- a/MP1_Reddit_Data_Collection/Assignment1.ipynb
+++ b/MP1_Reddit_Data_Collection/Assignment1.ipynb
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 14,
       "metadata": {
         "id": "x_q-AU9tnoMj"
       },
@@ -177,11 +177,16 @@
           "text": [
             "reddit=all\n",
             "num=5\n",
-            "That only happens to you once. 😃\n",
-            "Trump Rejects Vance\n",
-            "She's not wrong\n",
-            "The oppressive feeling of the pamir plateau\n",
-            "Just insidious\n"
+            "Memories always stay\n",
+            "Shots fired in Congress\n",
+            "Trump Humiliated in the ‘Most Powerless Image Ever’ of a U.S. President: O’Donnell\n",
+            "Democracy against insanity\n",
+            "Leopard thought he could eat a Baboon in front of his whole troop.\n",
+            "accepted uiuc!\n",
+            "UIUC has gotten pickier?\n",
+            "UIUC ea is out now!!!\n",
+            "The Soybean Innovation Lab at UIUC is closing because USAID is defunded\n",
+            "The Soybean Innovation Lab at UIUC is closing because USAID is defunded\n"
           ]
         }
       ],
@@ -236,6 +241,11 @@
         "        # 3. unpack comments with another for loop\n",
         "        # 4. append to data\n",
         "        # ===========================================\n",
+        "        submissions = self.reddit.subreddit(\"all\").search(keyword, sort = 'relevance', time_filter = time_filter, limit=5)\n",
+        "        \n",
+        "        for submission in submissions:\n",
+        "            print(submission.title)\n",
+        "\n",
         "        return data\n",
         "\n",
         "\n",
